--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+#query-select.MuiSelect-select {
+  padding: 0.5rem;
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.query-row svg {
+  fill: white;
+}
+
+#menu- > .MuiMenu-paper {
+  margin-top: 0.5rem;
+}
+
+#menu- .MuiMenu-list {
+  background: #282b30;
+  border: 1px solid #404348;
+  color: white;
+}
+
+#combinator-toggle > button {
+  color: white;
+  padding: 0.5rem 1rem;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid #404348;
+}
+
+#combinator-toggle > button.selected {
+  background-color: #4f46e5;
 }
